--- a/css/sangwa-reads.css
+++ b/css/sangwa-reads.css
@@ -1,6 +1,6 @@
 body{
 	margin: 0;
-	font-family: 'Permanent Marker', cursive;
+	font-family: 'Kaushan Script', cursive;
 	font-size: 20px;
 	line-height: 30px;
 }
@@ -12,7 +12,7 @@ header{
 }
 header h1{
 	color: #16C5A9;
-	font-size: 30px
+	font-size: 35px
 }
 header img{
 	border-radius: 200px;
@@ -28,7 +28,7 @@ main img {
 	border: 5px solid #16C5A9;
 }
 h2{
-	font-size: 20px;
+	font-size: 25px;
 	color:#16C5A9;
 }
 p{
@@ -51,5 +51,39 @@ a:hover{
 	height: 550px
 }
 h2.other{
-	padding-top: 20px
+	clear: both;
+}
+ul{ 
+	clear: both;
+}
+.row{
+	background-color: #16C5A9; 
+	color: #490245;
+}
+.row:after{
+	content: '';
+	display: table;
+	clear: both;
+}
+.col{
+	border: 4px dashed rgba(0,0,0,.2);
+	padding-bottom: 10px;
+	float: left;
+	margin-left: 20px;
+	width: 150px;
+	box-sizing: border-box;
+}
+.col:first-child{
+	margin-left: 0;
+}
+footer{
+	background-color: #16C5A9;
+	text-align: center;
+	padding: 50px; 
+}
+a.top{
+	text-decoration-line: none;
+}
+a.top:hover{
+	color: grey;
 }
