--- a/css/sangwa-reads.css
+++ b/css/sangwa-reads.css
@@ -103,7 +103,7 @@ img.julieimg{
 	transform: translateY(70px);
 }
 p.juliecap{
-	transform: translateY(70px);
+	transform: translateY(60px);
 }
 p.gamecap{
 	transform: translateY(-5px);
@@ -112,7 +112,7 @@ p.leftbookcap{
 	transform: translateY(-10px);
 }
 p.rightbookcap{
-	transform: translateY(-10px);
+	transform: translateY(-4px);
 }
 p.aboutcap{
 	transform: translateY(-19px);
@@ -135,6 +135,12 @@ p.bindycap{
 p.jokecap{
 	transform: translateY(-15px);
 }
-p.godscap{
-	transform: translateY(-8px);
+p.clashcap{
+	transform: translateY(-4px);
+}
+p.afuck{
+	transform: translateY(7px);
+}
+p.swords{
+	transform: translateY(0px);
 }
