--- a/css/sangwa-reads.css
+++ b/css/sangwa-reads.css
@@ -9,7 +9,7 @@ body{
 header{
 	/* background-color: #FFFFFF;*/
 	border: 5px solid #000000;
-	background-image: url("file:///C:/Users/sangw/Documents/Website/sangwa-reads/img2/header.jpeg");
+	background-image: url("file:///C:/Users/sangw/Documents/Website/sangwa-reads/img2/header.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	text-align: center;
