--- a/css/sangwa-reads.css
+++ b/css/sangwa-reads.css
@@ -9,7 +9,7 @@ body{
 header{
 	/* background-color: #FFFFFF;*/
 	border: 5px solid #000000;
-	background-image: url("file:///C:/Users/sangw/Documents/Website/sangwa-reads/img2/header.jpg");
+	background-image: url("https://i.pinimg.com/originals/72/d9/17/72d917426e84a4abd1d5155c4e0cf78e.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	text-align: center;
