--- a/css/sangwa-reads.css
+++ b/css/sangwa-reads.css
@@ -71,6 +71,20 @@ div.col{
 	width: 50%;
 	height: 550px
 }
+#leftbook{
+	float:left;
+	width:50%;
+	height: 450px
+}
+#rightbook{
+	float: right;
+	width: 50%;
+	height: 450px;
+}
+#rightbox{
+	display: block;
+	margin: 0 auto;
+}
 h2.other{
 	clear: both;
 }
@@ -120,23 +134,59 @@ p.juliecap{
 	transform: translateY(-30px);
 }
 p.julietext{
-	transform: translateY(-40px);
+	transform: translateY(-10px);
 }
 p.gamecap{
 	transform: translateY(-25px);
 }
+
+
+/* Currently reading books */
 p.leftbookcap{
 	transform: translateY(-25px);
+}
+img.leftbookimg{
+	z-index: 1;
+}
+p.leftbookdes{
+	transform: translateY(-465px);
+	text-align: left;
+	width: 260px;
+	height: 400px;
+	z-index: -1;
+	opacity: 0;
+}
+p.leftbookdes:hover{
+	opacity: 100;
 }
 p.rightbookcap{
 	transform: translateY(-25px);
 }
+p.rightbookdes{
+	transform: translateY(-465px);
+	text-align: left;
+	width: 260px;
+	height: 400px;
+	z-index: -1;
+	opacity: 0;
+}
+p.rightbookdes:hover{
+	opacity: 100;
+}
+img.rightbookimg{
+
+}
+
+
+
 p.aboutcap{
 	transform: translateY(-19px);
 }
 h2.about{
 	transform: translateY(-15px);
 }
+
+
 h2.currently{
 	transform: translateY(0px);
 }
@@ -153,7 +203,10 @@ p.clashcap{
 	transform: translateY(-4px);
 }
 p.afucktext{
-	transform: translateY(-100px);
+	transform: translateY(-60px);
+}
+p.joketext{
+	transform: translateY(70px);
 }
 p.fuckcap{
 	transform: translateY(-30px);
@@ -163,6 +216,9 @@ img.fuckimg{
 }
 p.swords{
 	transform: translateY(0px);
+}
+p.adancetext{
+	transform: translateY(-40px);
 }
 
 /* contacts page */
