--- a/css/sangwa-reads.css
+++ b/css/sangwa-reads.css
@@ -310,3 +310,51 @@ p.quotestext{
 	background-color: #EAEAEC;
 
 }
+
+/* book recommendations page */
+
+
+.container{
+	width: 100%;
+	height: 100vh;
+	background-image: url("https://i.pinimg.com/originals/c9/ca/22/c9ca22618538d293331834b2ddf5c36a.jpg");
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+}
+
+form{
+	background: #EAEAEC;
+	display: flex;
+	flex-direction: column;
+	padding: 2vw 4vw;
+	width: 90%;
+	max-width: 600px;
+	border-radius: 10px;
+}
+
+form h1{
+	margin-bottom: 40px;
+}
+
+form input, form textarea{
+	border:  0;
+	margin: 10px 0;
+	padding: 20px;
+	outline: none;
+	font-size: 16px;
+
+}
+
+form button{ 
+	padding: 15px;
+	background: white;
+	font-size: 18px;
+	border: 0;
+	outline: none;
+	cursor: pointer;
+	width: 150px;
+	margin: 20px auto 0;
+	border-radius: 30px;
+}
