--- a/css/sangwa-reads.css
+++ b/css/sangwa-reads.css
@@ -246,6 +246,55 @@ p.adancedes{
 p.adancedes:hover{
 	opacity: 100;
 }
+
+p.pooreconomicsdescription{
+		transform: translateY(-600px);
+	text-align: left;
+	width: 280px;
+	height: 500px;
+	z-index: -1;
+	opacity: 0;
+}
+p.pooreconomicsdescription:hover{
+	opacity: 100;
+}
+
+p.goodeconomicsdescription{
+		transform: translateY(-540px);
+	text-align: left;
+	width: 280px;
+	height: 435px;
+	z-index: -1;
+	opacity: 0;
+}
+p.goodeconomicsdescription:hover{
+	opacity: 100;
+}
+
+p.atomichabitsdescription{
+		transform: translateY(-550px);
+	text-align: left;
+	width: 280px;
+	height: 450px;
+	z-index: -1;
+	opacity: 0;
+}
+p.atomichabitsdescription:hover{
+	opacity: 100;
+}
+
+p.sixofcrowsdescription{
+		transform: translateY(-450px);
+	text-align: left;
+	width: 280px;
+	height: 400px;
+	z-index: -1;
+	opacity: 0;
+}
+p.sixofcrowsdescription:hover{
+	opacity: 100;
+}
+
 img.rightbookimg{
 
 }
