--- a/css/sangwa-reads.css
+++ b/css/sangwa-reads.css
@@ -9,7 +9,7 @@ body{
 header{
 	/* background-color: #FFFFFF;*/
 	border: 5px solid #000000;
-	background-image: url("https://i.pinimg.com/originals/72/d9/17/72d917426e84a4abd1d5155c4e0cf78e.jpg");
+	background-image: url("https://wallpapers.com/images/hd/earth-surface-4k-space-bshep7a66431s5uk.webp");
 	background-position: center;
 	background-repeat: no-repeat;
 	text-align: center;
@@ -163,10 +163,10 @@ img.leftbookimg{
 /* book descriptions */
 
 p.leftbookdes{
-	transform: translateY(-455px);
+	transform: translateY(-480px);
 	text-align: left;
 	width: 260px;
-	height: 380px;
+	height: 450px;
 	z-index: -1;
 	opacity: 0;
 }
@@ -177,10 +177,10 @@ p.rightbookcap{
 	transform: translateY(-25px);
 }
 p.rightbookdes{
-	transform: translateY(-485px);
+	transform: translateY(-480px);
 	text-align: left;
 	width: 260px;
-	height: 420px;
+	height: 400px;
 	z-index: -1;
 	opacity: 0;
 }
